Fix form overflow for upload form.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -380,7 +380,24 @@ span {
 /* Upload */
 
 .form-container {
+    max-width: 100vw;
     padding: 20px;
+}
+
+.file-type {
+    padding: 20px 0;
+}
+
+.upload-container {
+    margin-top: 50px;
+}
+
+#id_artwork_image {
+    width: 100%;
+}
+
+#id_content {
+    width: 100%;
 }
 
 /* Profile*/
